vlib/v/checker/tests/array_element_type.vv
fn main() {
	_ = []abc{}
	_ = [2, '']
}
